# omotes-rest

./: .dockerignore  .env.docker  .env.template  .gitignore  Dockerfile  Dockerfile-gunicorn  Dockerfile-uwsgi  README.md  dev-requirements.txt  dev.Dockerfile  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.override.dev.yml  docker-compose.yml  pyproject.toml  requirements-uwsgi.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  publish_container_image.yml
ci/: create_dev_environment.bat  install_dependencies.bat  update_dependencies.bat
ci/linux/: create_venv.sh  lint.sh  typecheck.sh  update_dependencies.sh
doc/: Monitoring_job_runs.md
esdl-mapeditor-config/: README.md  esdl_config.py  nwn_dispatcher_config.template.json  nwn_dispatcher_service.json  nwn_dispatcher_service_table.json  nwn_dispatcher_service_table_both.json
postgres_db/initdb.d/: init.sql
postgres_db_upgrade/: Dockerfile  README.md
postgres_db_upgrade/alembic/: env.py
postgres_db_upgrade/alembic/versions/: 2024_03_15_2214-50f731d37156_initial_commit.py  2024_03_18_1020-0b2b6ee9274d_initial_commit.py  2024_03_19_0833-0a36c33edc13_initial_commit2.py  2024_03_21_2212-e037fa7ad61e_initial_commit.py
postgres_db_upgrade/scripts/: create_venv.sh  start_postgres_in_setup_mode.sh
scripts/: db_models_generate_new_revision.sh  setup.sh  start-dev.sh  start.sh  stop.sh  update_dependencies.sh
src/: alembic.ini  gunicorn.conf.py  start.sh
src/omotes_rest/: __init__.py  config.py  database.py  log.py  main.py  omotes_actions.py  postgres_interface.py  rest_interface.py  settings.py  typed_app.py  workflows.py
src/omotes_rest/apis/: __init__.py  api_dataclasses.py  job.py  status.py  workflow.py
src/omotes_rest/db_models/: job_rest.py
src/postgres_db_upgrade/: env.py
src/postgres_db_upgrade/versions/: 2024_11_28_1531-8c22ec9e5d18_add_esdl_feedback_messages.py  2025_04_14_1746-f6f4ed834980_add_job_priority.py
tno/mapeditor_dispatcher/: __init__.py  database.py  dbmodels.py  main.py  settings.py
tno/mapeditor_dispatcher/apis/: dispatch.py  job.py  status.py
tno/optimizer_dispatcher/: __init__.py  main.py
tno/optimizer_dispatcher/apis/: dispatch.py  status.py
tno/shared/: log.py  utils.py
unit_test/: test_main.py
uwsgi/: uWSGI.md  uwsgi-gevent.ini  uwsgi-long-polling.ini
