[project]
name = "mapeditor-nwn-dispatcher"
version = "0.0.2"
authors = [
    { name = "Ewoud Werkman (TNO)", email = "ewoud.werkman@tno.nl" },
    { name = "Mark Vrijlandt (TNO)", email = "mark.vrijlandt@tno.nl" }
]
description = "MapEditor - NWN dispatcher"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "colorama ~= 0.4.6",
    "Flask ~= 2.3.2",
    "Flask-Cors ~= 4.0.0",
    "Flask-DotEnv ~= 0.1.2",
    "flask-smorest ~= 0.42.0",
    "gunicorn ~= 21.2.0",
    "marshmallow ~= 3.20.1",
    "marshmallow-dataclass ~= 8.5.14",
    "nwnsdk == 0.0.6.post1",
    "pika ~= 1.3.2",
    "python-dotenv ~= 1.0.0",
    "structlog ~= 23.1.0",
    "SQLAlchemy == 2.0.19",
    "sqlalchemy-stubs == 0.4",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
