[project]
name = "omotes-rest"
dynamic = ["version"]
authors = [
    { name = "Ewoud Werkman (TNO)", email = "ewoud.werkman@tno.nl" },
    { name = "Mark Vrijlandt (TNO)", email = "mark.vrijlandt@tno.nl" }
]
description = "Omotes - REST"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "colorama ~= 0.4.6",
    "Flask ~= 2.3.2",
    "Flask-Cors ~= 4.0.0",
    "Flask-DotEnv ~= 0.1.2",
    "flask-smorest ~= 0.42.0",
    "gunicorn ~= 21.2.0",
    "marshmallow ~= 3.20.1",
    "marshmallow-dataclass ~= 8.5.14",
    "marshmallow-enum ~= 1.5.1",
    "psycopg2-binary ~= 2.9",
    "python-dotenv ~= 1.0.0",
    "structlog ~= 23.1.0",
    "SQLAlchemy == 2.0.28",
    "omotes-sdk-python ~= 3.2.5",
    "alembic ~= 1.13.1",
]

[project.optional-dependencies]
dev = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
    "black ~= 24.10.0",
    "flake8 == 7.1.1",
    "flake8-pyproject ~= 1.2.3",
    "flake8-docstrings ~= 1.7.0",
    "flake8-quotes ~= 3.4.0",
    "flake8-bugbear ~= 24.10.31",
    "flake8-tuple ~= 0.4.1",
    "pytest ~= 8.3.4",
    "pytest-cov ~= 6.0.0",
    "mypy ~= 1.13.0",
    "isort == 5.13.2",
    "build ~= 1.2.2",
    "sqlalchemy[mypy]",
    "types-protobuf ~= 4.24.0",
    "types-Flask-Cors"
]

[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Nieuwe-Warmte-Nu/omotes-rest"
changelog = "https://github.com/Nieuwe-Warmte-Nu/omotes-rest    /blob/main/CHANGELOG.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
]

[tools.setuptools]
packages = ["src/omotes_rest"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.pytest.ini_options]
addopts = """--cov=omotes_rest --cov-report html --cov-report term-missing \
--cov-fail-under 40"""

[tool.coverage.run]
source = ["src"]

[tool.flake8]
exclude = ['.venv/*', 'venv/*', 'doc/*']
ignore = [
    'Q000', # Remove bad quotes
    'D401', # Docstring First line should be imperative
    'E203', # Space before colon (not PEP-8 compliant, and conflicts with black)
    'C408', # Suggestion to use dict() over {}
    'W503', # Starting lines with operators.
    'D104', # Missing docstring in public package
    'D100'  # Missing docstring in public module
]
per-file-ignores = [
    '__init__.py:F401',
    './unit_test/*:D100,D101,D102,D103'
]
max-line-length = 100
count = true

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    '.venv/*',
    'venv/*',
    'doc/*',
    'build',
    'component',
    'testscript',
    'testmodel',
    'tryouts.py',
]
plugins = ['sqlalchemy.ext.mypy.plugin', "marshmallow_dataclass.mypy"]

# mypy per-module options:
[[tool.mypy.overrides]]
module = "unit_test.*"
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["flask_smorest.*", "flask_dotenv.*", "gunicorn.*"]
ignore_missing_imports = true
